@@ -100,20 +100,20 @@ Reverse Provides:
        <listitem><para><literal>Pure virtual packages</literal> is the number of packages that exist 
        only as a virtual package name; that is, packages only "provide" the 
        virtual package name, and no package actually uses the name. For 
-       instance, "mail-transport-agent" in the Debian GNU/Linux system is a 
+       instance, "mail-transport-agent" in the Debian system is a 
        pure virtual package; several packages provide "mail-transport-agent", 
        but there is no package named "mail-transport-agent".</para>
        </listitem>
    
        <listitem><para><literal>Single virtual packages</literal> is the number of packages with only 
        one package providing a particular virtual package. For example, in the
-       Debian GNU/Linux system, "X11-text-viewer" is a virtual package, but 
+       Debian system, "X11-text-viewer" is a virtual package, but 
        only one package, xless, provides "X11-text-viewer".</para>
        </listitem>
 
        <listitem><para><literal>Mixed virtual packages</literal> is the number of packages that either 
        provide a particular virtual package or have the virtual package name 
-       as the package name. For instance, in the Debian GNU/Linux system, 
+       as the package name. For instance, in the Debian system, 
        "debconf" is both an actual package, and provided by the debconf-tiny
        package.</para>
        </listitem>
