@@ -98,7 +98,7 @@
 	 <para><literal>install</literal> is followed by one or more 
 	 packages desired for installation or upgrading. 
 	 Each package is a package name, not a fully qualified 
-	 filename (for instance, in a Debian GNU/Linux system, 
+	 filename (for instance, in a Debian system, 
 	 libc6 would be the argument provided, not 
 	 <literal>libc6_1.9.6-2.deb</literal>). All packages required 
 	 by the package(s) specified for installation will also 
