@@ -14,7 +14,7 @@
 .\" License along with APT; if not, write to the Free Software
 .\" Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 
 .\" 02111-1307 USA
-.TH apt 8 "16 June 1998" "Debian GNU/Linux"
+.TH apt 8 "16 June 1998" "Debian"
 .SH NAME
 apt \- Advanced Package Tool
 .SH SYNOPSIS
