@@ -460,7 +460,7 @@ Pin: release n=&testing-codename;
 <varlistentry>
 <term>the <literal>Version:</literal> line</term>
 <listitem><simpara>names the release version.  For example, the
-packages in the tree might belong to Debian GNU/Linux release
+packages in the tree might belong to Debian release
 version 3.0.  Note that there is normally no version number for the
 <literal>testing</literal> and <literal>unstable</literal> distributions because they
 have not been released yet.  Specifying this in the APT preferences
