@@ -31,7 +31,7 @@
 
 	<p>
 	  You should have received a copy of the GNU General Public
-	  License with your Debian GNU/Linux system, in
+	  License with your Debian system, in
 	  <tt>/usr/share/common-licenses/GPL</tt>, or with the
 	  <prgn/debiandoc-sgml/ source package as the file
 	  <tt>COPYING</tt>.  If not, write to the Free Software
