@@ -19,7 +19,7 @@ by the Free Software Foundation; either version 2 of the License, or (at your
 option) any later version.
 
 <p>
-For more details, on Debian GNU/Linux systems, see the file
+For more details, on Debian systems, see the file
 /usr/share/common-licenses/GPL for the full license.
 </copyright>
 
