@@ -36,7 +36,7 @@
  <refsect1><title>Description</title>
    <para>The package resource list is used to locate archives of the package
    distribution system in use on the system. At this time, this manual page
-   documents only the packaging system used by the Debian GNU/Linux system.
+   documents only the packaging system used by the Debian system.
    This control file is <filename>/etc/apt/sources.list</filename>.</para>
 
    <para>The source list is designed to support any number of active sources and a
